fix: dark mode

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -38,7 +38,7 @@ body.dark {
 .dark .chatbot p,
 .dark p,
 .dark #free-mode p,
-.dark #guided-area p, .dark .step-badge, .dark strong,  .dark li, .dark td, .dark th, .dark tr, .dark code
+.dark #guided-area p, .dark strong,  .dark li, .dark td, .dark th, .dark tr, .dark code
 /* , .dark  .prose * */
  {
   color: #262626 !important;
@@ -49,13 +49,14 @@ body.dark {
   --body-text-color: #262626 !important;
 }
 
-.dark .chatbot,
+/* background-color: var(--background-default-grey) !important; */
+/* .dark .chatbot,
 .dark .message-row,
 .dark .user,
 .dark .user:hover,
 .dark .user:active {
-  background-color: var(--background-default-grey) !important;
-}
+  background-color: transparent !important;
+} */
 
 .dark code {
   background-color: var(--neutral-100);
